fix rounding and overflow bugs

--- a/hocoapp/static/css/home.css
+++ b/hocoapp/static/css/home.css
@@ -77,6 +77,7 @@
     padding: 5px;
     border: 1px solid #ccc;
     border-top: none;
+    overflow-wrap: break-word;
 }
 
 .scoreboard table {
